add react-look support

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "classnames": "^2.2.5",
     "coffee-script": "^1.10.0",
     "radium": "^0.17.1",
-    "react": "^15.1.0"
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-look": "^1.0.0-beta9"
   }
 }
