update require pkgs versions && use radium plugins for inline style

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "radium": "^0.17.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-look": "^1.0.0-beta9",
-    "reactcss": "^1.0.3"
+    "react-look": "^1.0.1",
+    "reactcss": "^1.0.4"
   }
 }
